Restructured header files

--- a/src/factory/CMakeLists.txt
+++ b/src/factory/CMakeLists.txt
@@ -1,18 +1,18 @@
 set(HEADER_FILES 
-		${CMAKE_CURRENT_SOURCE_DIR}/libClassFactory.h
-		${CMAKE_CURRENT_SOURCE_DIR}/detail/ClassFactory.h
-		${CMAKE_CURRENT_SOURCE_DIR}/detail/ClassAllocator.h
-		${CMAKE_CURRENT_SOURCE_DIR}/detail/Registration.h
-		${CMAKE_CURRENT_SOURCE_DIR}/detail/Singleton.h
+		${CMAKE_SOURCE_DIR}/include/ClassFactory/LCF.h
+		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/ClassFactory.h
+		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/ClassAllocator.h
+		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/Registration.h
+		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/Singleton.h
 )
 
 add_library(ClassFactory STATIC
 	${HEADER_FILES}
-	${CMAKE_CURRENT_SOURCE_DIR}/detail/ClassFactory.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/ClassFactory.cpp
 )	
 
 set_target_properties(ClassFactory PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 target_include_directories(ClassFactory PUBLIC
-	${CMAKE_CURRENT_SOURCE_DIR}
+	${CMAKE_SOURCE_DIR}/include/
 )
