use different cmake-method for directoy inclusion

--- a/src/factory/CMakeLists.txt
+++ b/src/factory/CMakeLists.txt
@@ -6,13 +6,13 @@ set(HEADER_FILES
 		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/Singleton.h
 )
 
+include_directories(
+	${CMAKE_SOURCE_DIR}/include/
+)
+
 add_library(ClassFactory STATIC
 	${HEADER_FILES}
 	${CMAKE_CURRENT_SOURCE_DIR}/ClassFactory.cpp
 )	
 
 set_target_properties(ClassFactory PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-target_include_directories(ClassFactory PUBLIC
-	${CMAKE_SOURCE_DIR}/include/
-)
