--- a/src/example/CMakeLists.txt
+++ b/src/example/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(FactoryExample main.cpp)
-target_link_libraries(FactoryExample LINK_PUBLIC ClassFactory) 
+include_directories(
+	${CMAKE_SOURCE_DIR}/include/
+)
 
+add_executable(FactoryExample main.cpp)
+target_link_libraries(FactoryExample ClassFactory) 
 set_target_properties(FactoryExample PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
