Update CMake-Files in order to keep source tree structure in visual studio

--- a/src/factory/CMakeLists.txt
+++ b/src/factory/CMakeLists.txt
@@ -1,5 +1,8 @@
-set(HEADER_FILES 
+set(MAIN_HEADER_FILE
 		${CMAKE_SOURCE_DIR}/include/ClassFactory/LCF.h
+)
+
+set(DETAIL_HEADER_FILES 
 		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/ClassFactory.h
 		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/ClassAllocator.h
 		${CMAKE_SOURCE_DIR}/include/ClassFactory/detail/Registration.h
@@ -10,9 +13,13 @@ include_directories(
 	${CMAKE_SOURCE_DIR}/include/
 )
 
+source_group("" FILES ${MAIN_HEADER_FILE})
+source_group("detail" FILES ${DETAIL_HEADER_FILES} ${CMAKE_CURRENT_SOURCE_DIR}/ClassFactory.cpp)
+
 add_library(ClassFactory STATIC
-	${HEADER_FILES}
+	${MAIN_HEADER_FILE}
+	${DETAIL_HEADER_FILES}
 	${CMAKE_CURRENT_SOURCE_DIR}/ClassFactory.cpp
-)	
+)
 
 set_target_properties(ClassFactory PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
